--- a/main.html
+++ b/main.html
@@ -1,14 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Table</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <table style="width: 100%; height: 100%">
-      <!-- Your code here -->
-    </table>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Table</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+
+<body>
+  <table style="width: 100%; height: 100%">
+    <tr>
+      <td>
+        <table>
+          <tr>
+            <th colspan="2">Nested Table 2</th>
+          </tr>
+          <tr>
+            <th>Column 1</th>
+            <th>Column 2</th>
+          </tr>
+          <tbody>
+            <tr>
+              <td>abc</td>
+              <td>def</td>
+            </tr>
+          </tbody>
+        </table>
+      </td>
+      <td>
+        <table>
+          <tr>
+            <th>Nested Table 1</th>
+          </tr>
+          <tr>
+            <td>
+
+              <ul>
+                <li>List item 1</li>
+                <li>List item 2</li>
+                <li>List item 3</li>
+              </ul>
+            </td>
+          </tr>
+        </table>
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <table>
+          <thead>
+            <tr>
+              <th>Nested Table 3</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Nested Table</td>
+              <td>Demo Continued</td>
+            </tr>
+          </tbody>
+        </table>
+      </td>
+      <td>
+        <table>
+          <tr>
+            <th>Nested Table 4</th>
+          </tr>
+          <tr>
+            <td style="background-color:black; color: white;">
+              HTML
+            </td>
+          </tr>
+        </table>
+      </td>
+    </tr>
+  </table>
+</body>
+
 </html>
